# FaceBlenderShape

./: .gitignore  README.md  blender_interface.py  face_blender_preview.yaml  pyproject.toml  requirements.txt  run.py  sranipal2keypoints.py
data/: sample_arkit.csv
docs/: custom-digital-human.md
face_blender_shape/: __init__.py  __main__.py  blender_runtime.py  blendshape_mapping.py  cli.py  constants.py  io.py  landmarks.py  open3d_viewer.py  paths.py  trajectory_mapping.py  visual_presets.py
face_blender_shape/app/: __init__.py  preview.py
face_blender_shape/core/: __init__.py  asset_names.py  blendshape_schema.py  paths.py  viewer_defaults.py
face_blender_shape/io/: __init__.py  blendshape_csv.py  preview_config.py
face_blender_shape/runtime/: __init__.py  blender_runtime.py  frame_builder.py  material_colors.py  mesh_eval.py  shape_key_driver.py
face_blender_shape/viewer/: __init__.py  open3d_viewer.py  shading.py  visual_presets.py
face_blender_shape/viewers/: __init__.py  matplotlib_viewer.py  open3d_viewer.py
scripts/: __init__.py  export_sranipal_csv_to_arkit.py  generate_tongue_demo.py  list_fbx_meshes.py  mock_talk_pipeline.py
typings/: bmesh.pyi  bpy.pyi  mathutils.pyi
